# gz-rendering-benchmark

depot_low_light/: README.md  ambient_light_discoloration.sdf  depot_directional.sdf  depot_manylights.sdf  depot_point.sdf  jagged_shadows_directional.sdf  jagged_shadows_point.sdf  jagged_shadows_spot.sdf  low_light_barrels.sdf  low_light_barrels_directional.sdf  low_light_barrels_spot.sdf  shapes.sdf
depot_low_light/depot/: model.sdf
depot_low_light/simple_demo/: GlutWindow.cc  Main.cc
gamma_correction/: README.md  gradients.sdf  gradients_camera_sensor.sdf  gradients_no_lights.sdf  gradients_no_lights_camera_sensor.sdf
gamma_correction/gradients/: CMakeLists.txt  GlutWindow.cc  Main.cc
gamma_correction/gradients demo/: GlutWindow.cc  Main.cc
gamma_correction/gradients_qml/: GzRenderer.cc  Main.qml
gamma_correction/gradients_qml demo/: CMakeLists.txt  GzRenderer.cc  GzRenderer.hh  ThreadRenderer.cpp
global_illumination/: cornell_box_gi_demo.blend  cornell_box_gi_demo.sdf  cornell_box_gi_demo_mascot.blend
global_illumination/garden_mascot/: metadata.pbtxt  model.sdf
global_illumination/gi_for_sensors_demo/: gi_for_sensors_demo.sdf
wave_test/: wave_test.blend  wave_test.dae  wave_test.glb  wave_test.sdf  wave_test.stl
